--- a/docs/src/css/stylemisfinanzas.css
+++ b/docs/src/css/stylemisfinanzas.css
@@ -1,43 +1,14 @@
-.banner {
-  background-image: url(../../assets/img/misfinanzasopaco.png);
-}
-
-.sectionWhite {
-  background-color: #fff;
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-.sectionColorYellow {
-  border: 3px solid #fed136;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-  width: 50%;
-  padding: 10px;
-  margin: auto;
-}
-
-.sectionInvestigacion {
-  text-align: center;
-  width: 50%;
-  padding: 50px;
-  margin: auto;
-}
-
-#investigacion {
-  justify-content: flex-start;
-  text-align: center;
-}
-
-#entrevistas {
-  text-align: center;
-}
-
-.prototipo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.banner::after {
+  content: "";
+  background-image: url(../../assets/img/misfinanzasopaco.png);;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: rgba(0,0,0, 0.7);
+  z-index: -1; 
+  position: absolute;  
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
