--- a/docs/src/css/stylecalce.css
+++ b/docs/src/css/stylecalce.css
@@ -1,6 +1,6 @@
 .banner::after {
   content: "";
-  background-image: url(../../assets/imgcalce/calce.PNG);
+  background-image: url(../../assets/imgcalce/calce3edOPACO.png);
   ;
   background-repeat: no-repeat;
   background-position: center;
